# meeple-cli

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  justfile  pyproject.toml  setup.py  travis.yml
.github/workflows/: python-publish.yml  python-test.yml
.trunk/: trunk.yaml
.trunk/config/: .markdownlint.yaml
bgg/: __init__.py  bgg.py
bgg/command/: __init__.py  add.py  collections.py  delete.py  drop.py  get.py  hot.py  info.py  list.py  move.py  new.py  open.py  search.py  stats.py  update.py
bgg/type/: item.py
bgg/util/: api_util.py  collection_util.py  data_util.py  fs_util.py  input_util.py  output_util.py  sort_util.py
docs/: changelog.md  contributing.md  faq.md
in/: collection.yml  copy.yml  own.yml  sell.yml  wishlist.yml
meeple/: __init__.py  root.py
meeple/command/: add.py  delete.py  drop.py  hot.py  info.py  list.py  move.py  open.py  search.py  stats.py  update.py
meeple/util/: api_util.py
src/meeple/: __init__.py  root.py
src/meeple/command/: __init__.py  add.py  campaigns.py  collections.py  completions.py  delete.py  drop.py  find.py  hot.py  import_.py  info.py  list.py  list_.py  move.py  new.py  open.py  open_.py  rename.py  search.py  stats.py  update.py
src/meeple/type/: __init__.py  bgg_collection_item.py  bgg_user.py  collection.py  collection_data.py  collection_state.py  item.py  item_credits.py
src/meeple/util/: api_util.py  cmd_util.py  collection_util.py  completion_util.py  data_util.py  filter_util.py  fmt_util.py  fs_util.py  input_util.py  message_util.py  output_util.py  sort_util.py  table_util.py
tests/: test_bgg.py  test_root.py
tests/type/: test_collection.py  test_item.py
tests/util/: test_collection_util.py  test_completion_util.py  test_filter_util.py  test_fmt_util.py  test_fs_util.py  test_input_util.py  test_output_util.py  test_sort_util.py
