[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "meeple-cli"
authors = [{ name = "Bradley Wojcik", email = "bradleycwojcik@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
  "click >=8",
  "tabulate >=0.9.0",
  "xmltodict >=0.12.0",
  "requests >=2",
  "pyyaml >=6",
]

[tool.flit.module]
name = "bgg"

[project.urls]
Home = "https://github.com/boldandbrad/bgg-cli"

[project.scripts]
bgg = "bgg.bgg:cli"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "codecov", "homebrew-pypi-poet"]
dev = ["black", "flit"]
