[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "meeple-cli"
authors = [{ name = "Bradley Wojcik", email = "bradleycwojcik@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
  "arrow >=1",
  "click >=8",
  "rich >=13",
  "xmltodict >=0.12.0",
  "requests >=2",
  "pyyaml >=6.0.1",
]

[project.scripts]
meeple = "meeple.root:cli"

[project.urls]
Home = "https://github.com/boldandbrad/meeple-cli"

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov",
  "pytest-mock",
]
dev = [
  "black",
  "flake8",
  "flit",
  "isort",
  "pre-commit",
  "homebrew-pypi-poet",
  "semgrep",
  "refurb",
]

[tool.flit.module]
name = "meeple"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
